[package]
name = "elixir-in-action-chapter-8"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
axum = "0.7.9"
bincode = "1.3.3"
chrono = { version = "0.4.38", features = ["serde"]}
ractor = "0.13.0"
serde = { version = "1.0.215", features = ["serde_derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}
tower = { version = "0.5.1", features = ["util", "timeout"] }
tower-http = { version = "0.6.1", features = ["add-extension", "trace"] }
